--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 logo: https://bioboot.github.io/bimm143_S24/assets/img/logo.png
-title: Yvonne's Bioinformatics Portfolio
+title: Bioinformatics Portfolio - Yvonne Yu
